--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Mingzepeng.github.com</title>
+    <title>茗梓的BLOG</title>
   </head>
 
   <body>
