--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ title: 茗梓小栈
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
+  <h2>文章列表</h2>
   <ul class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><span>{{ post.date | date: "%Y-%m-%d" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 </div>
