- 布局全部转向html5的标签，通过引入html5.js来支持ie - 改善了导航条fixed于顶部的js代码，增强了ie的兼容性 - 更换了一个语法高亮的css - 增加文章的归档

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 layout: default
 title: 茗梓小栈
 ---
-
+<style type="text/css">
+article{ margin-bottom: 1em; border-bottom: 1px solid #ddd}
+</style>
 <div id="home">
   <ul class="posts">
     {% for post in site.posts %}
